fix alignment of chevron on 3rd level nav items

--- a/assets/sass/_navigation.scss
+++ b/assets/sass/_navigation.scss
@@ -223,7 +223,7 @@ Style guide: Navigation.2 Local Navigation
           @extend .icon-arrow-right;
           padding-left: $base-spacing + $small-spacing;
           background-repeat: no-repeat;
-          background-position: $base-spacing $small-spacing * 1.15;
+          background-position: $base-spacing $small-spacing * 1.45;
           background-size: $tiny-spacing auto;
         }
       }
